@@ -120,7 +120,7 @@ set TZData(:Africa/Cairo) {
     {1209074400 10800 1 EEST}
     {1219957200 7200 0 EET}
     {1240524000 10800 1 EEST}
-    {1253826000 7200 0 EET}
+    {1250802000 7200 0 EET}
     {1272578400 10800 1 EEST}
     {1285880400 7200 0 EET}
     {1304028000 10800 1 EEST}
