@@ -91,185 +91,185 @@ set TZData(:Asia/Gaza) {
     {1207000800 10800 1 EEST}
     {1219964400 7200 0 EET}
     {1238104800 10800 1 EEST}
-    {1254092400 7200 0 EET}
+    {1252018800 7200 0 EET}
     {1269554400 10800 1 EEST}
-    {1285542000 7200 0 EET}
+    {1283468400 7200 0 EET}
     {1301004000 10800 1 EEST}
-    {1316991600 7200 0 EET}
+    {1314918000 7200 0 EET}
     {1333058400 10800 1 EEST}
-    {1348441200 7200 0 EET}
+    {1346972400 7200 0 EET}
     {1364508000 10800 1 EEST}
-    {1380495600 7200 0 EET}
+    {1378422000 7200 0 EET}
     {1395957600 10800 1 EEST}
-    {1411945200 7200 0 EET}
+    {1409871600 7200 0 EET}
     {1427407200 10800 1 EEST}
-    {1443394800 7200 0 EET}
+    {1441321200 7200 0 EET}
     {1458856800 10800 1 EEST}
-    {1474844400 7200 0 EET}
+    {1472770800 7200 0 EET}
     {1490911200 10800 1 EEST}
-    {1506294000 7200 0 EET}
+    {1504220400 7200 0 EET}
     {1522360800 10800 1 EEST}
-    {1537743600 7200 0 EET}
+    {1536274800 7200 0 EET}
     {1553810400 10800 1 EEST}
-    {1569798000 7200 0 EET}
+    {1567724400 7200 0 EET}
     {1585260000 10800 1 EEST}
-    {1601247600 7200 0 EET}
+    {1599174000 7200 0 EET}
     {1616709600 10800 1 EEST}
-    {1632697200 7200 0 EET}
+    {1630623600 7200 0 EET}
     {1648159200 10800 1 EEST}
-    {1664146800 7200 0 EET}
+    {1662073200 7200 0 EET}
     {1680213600 10800 1 EEST}
-    {1695596400 7200 0 EET}
+    {1693522800 7200 0 EET}
     {1711663200 10800 1 EEST}
-    {1727650800 7200 0 EET}
+    {1725577200 7200 0 EET}
     {1743112800 10800 1 EEST}
-    {1759100400 7200 0 EET}
+    {1757026800 7200 0 EET}
     {1774562400 10800 1 EEST}
-    {1790550000 7200 0 EET}
+    {1788476400 7200 0 EET}
     {1806012000 10800 1 EEST}
-    {1821999600 7200 0 EET}
+    {1819926000 7200 0 EET}
     {1838066400 10800 1 EEST}
-    {1853449200 7200 0 EET}
+    {1851375600 7200 0 EET}
     {1869516000 10800 1 EEST}
-    {1884898800 7200 0 EET}
+    {1883430000 7200 0 EET}
     {1900965600 10800 1 EEST}
-    {1916953200 7200 0 EET}
+    {1914879600 7200 0 EET}
     {1932415200 10800 1 EEST}
-    {1948402800 7200 0 EET}
+    {1946329200 7200 0 EET}
     {1963864800 10800 1 EEST}
-    {1979852400 7200 0 EET}
+    {1977778800 7200 0 EET}
     {1995314400 10800 1 EEST}
-    {2011302000 7200 0 EET}
+    {2009228400 7200 0 EET}
     {2027368800 10800 1 EEST}
-    {2042751600 7200 0 EET}
+    {2040678000 7200 0 EET}
     {2058818400 10800 1 EEST}
-    {2074201200 7200 0 EET}
+    {2072732400 7200 0 EET}
     {2090268000 10800 1 EEST}
-    {2106255600 7200 0 EET}
+    {2104182000 7200 0 EET}
     {2121717600 10800 1 EEST}
-    {2137705200 7200 0 EET}
+    {2135631600 7200 0 EET}
     {2153167200 10800 1 EEST}
-    {2169154800 7200 0 EET}
+    {2167081200 7200 0 EET}
     {2184616800 10800 1 EEST}
-    {2200604400 7200 0 EET}
+    {2198530800 7200 0 EET}
     {2216671200 10800 1 EEST}
-    {2232054000 7200 0 EET}
+    {2230585200 7200 0 EET}
     {2248120800 10800 1 EEST}
-    {2264108400 7200 0 EET}
+    {2262034800 7200 0 EET}
     {2279570400 10800 1 EEST}
-    {2295558000 7200 0 EET}
+    {2293484400 7200 0 EET}
     {2311020000 10800 1 EEST}
-    {2327007600 7200 0 EET}
+    {2324934000 7200 0 EET}
     {2342469600 10800 1 EEST}
-    {2358457200 7200 0 EET}
+    {2356383600 7200 0 EET}
     {2374524000 10800 1 EEST}
-    {2389906800 7200 0 EET}
+    {2387833200 7200 0 EET}
     {2405973600 10800 1 EEST}
-    {2421356400 7200 0 EET}
+    {2419887600 7200 0 EET}
     {2437423200 10800 1 EEST}
-    {2453410800 7200 0 EET}
+    {2451337200 7200 0 EET}
     {2468872800 10800 1 EEST}
-    {2484860400 7200 0 EET}
+    {2482786800 7200 0 EET}
     {2500322400 10800 1 EEST}
-    {2516310000 7200 0 EET}
+    {2514236400 7200 0 EET}
     {2531772000 10800 1 EEST}
-    {2547759600 7200 0 EET}
+    {2545686000 7200 0 EET}
     {2563826400 10800 1 EEST}
-    {2579209200 7200 0 EET}
+    {2577135600 7200 0 EET}
     {2595276000 10800 1 EEST}
-    {2611263600 7200 0 EET}
+    {2609190000 7200 0 EET}
     {2626725600 10800 1 EEST}
-    {2642713200 7200 0 EET}
+    {2640639600 7200 0 EET}
     {2658175200 10800 1 EEST}
-    {2674162800 7200 0 EET}
+    {2672089200 7200 0 EET}
     {2689624800 10800 1 EEST}
-    {2705612400 7200 0 EET}
+    {2703538800 7200 0 EET}
     {2721679200 10800 1 EEST}
-    {2737062000 7200 0 EET}
+    {2734988400 7200 0 EET}
     {2753128800 10800 1 EEST}
-    {2768511600 7200 0 EET}
+    {2767042800 7200 0 EET}
     {2784578400 10800 1 EEST}
-    {2800566000 7200 0 EET}
+    {2798492400 7200 0 EET}
     {2816028000 10800 1 EEST}
-    {2832015600 7200 0 EET}
+    {2829942000 7200 0 EET}
     {2847477600 10800 1 EEST}
-    {2863465200 7200 0 EET}
+    {2861391600 7200 0 EET}
     {2878927200 10800 1 EEST}
-    {2894914800 7200 0 EET}
+    {2892841200 7200 0 EET}
     {2910981600 10800 1 EEST}
-    {2926364400 7200 0 EET}
+    {2924290800 7200 0 EET}
     {2942431200 10800 1 EEST}
-    {2957814000 7200 0 EET}
+    {2956345200 7200 0 EET}
     {2973880800 10800 1 EEST}
-    {2989868400 7200 0 EET}
+    {2987794800 7200 0 EET}
     {3005330400 10800 1 EEST}
-    {3021318000 7200 0 EET}
+    {3019244400 7200 0 EET}
     {3036780000 10800 1 EEST}
-    {3052767600 7200 0 EET}
+    {3050694000 7200 0 EET}
     {3068229600 10800 1 EEST}
-    {3084217200 7200 0 EET}
+    {3082143600 7200 0 EET}
     {3100284000 10800 1 EEST}
-    {3115666800 7200 0 EET}
+    {3114198000 7200 0 EET}
     {3131733600 10800 1 EEST}
-    {3147721200 7200 0 EET}
+    {3145647600 7200 0 EET}
     {3163183200 10800 1 EEST}
-    {3179170800 7200 0 EET}
+    {3177097200 7200 0 EET}
     {3194632800 10800 1 EEST}
-    {3210620400 7200 0 EET}
+    {3208546800 7200 0 EET}
     {3226082400 10800 1 EEST}
-    {3242070000 7200 0 EET}
+    {3239996400 7200 0 EET}
     {3258136800 10800 1 EEST}
-    {3273519600 7200 0 EET}
+    {3271446000 7200 0 EET}
     {3289586400 10800 1 EEST}
-    {3304969200 7200 0 EET}
+    {3303500400 7200 0 EET}
     {3321036000 10800 1 EEST}
-    {3337023600 7200 0 EET}
+    {3334950000 7200 0 EET}
     {3352485600 10800 1 EEST}
-    {3368473200 7200 0 EET}
+    {3366399600 7200 0 EET}
     {3383935200 10800 1 EEST}
-    {3399922800 7200 0 EET}
+    {3397849200 7200 0 EET}
     {3415384800 10800 1 EEST}
-    {3431372400 7200 0 EET}
+    {3429298800 7200 0 EET}
     {3447439200 10800 1 EEST}
-    {3462822000 7200 0 EET}
+    {3460748400 7200 0 EET}
     {3478888800 10800 1 EEST}
-    {3494876400 7200 0 EET}
+    {3492802800 7200 0 EET}
     {3510338400 10800 1 EEST}
-    {3526326000 7200 0 EET}
+    {3524252400 7200 0 EET}
     {3541788000 10800 1 EEST}
-    {3557775600 7200 0 EET}
+    {3555702000 7200 0 EET}
     {3573237600 10800 1 EEST}
-    {3589225200 7200 0 EET}
+    {3587151600 7200 0 EET}
     {3605292000 10800 1 EEST}
-    {3620674800 7200 0 EET}
+    {3618601200 7200 0 EET}
     {3636741600 10800 1 EEST}
-    {3652124400 7200 0 EET}
+    {3650655600 7200 0 EET}
     {3668191200 10800 1 EEST}
-    {3684178800 7200 0 EET}
+    {3682105200 7200 0 EET}
     {3699640800 10800 1 EEST}
-    {3715628400 7200 0 EET}
+    {3713554800 7200 0 EET}
     {3731090400 10800 1 EEST}
-    {3747078000 7200 0 EET}
+    {3745004400 7200 0 EET}
     {3762540000 10800 1 EEST}
-    {3778527600 7200 0 EET}
+    {3776454000 7200 0 EET}
     {3794594400 10800 1 EEST}
-    {3809977200 7200 0 EET}
+    {3807903600 7200 0 EET}
     {3826044000 10800 1 EEST}
-    {3841426800 7200 0 EET}
+    {3839958000 7200 0 EET}
     {3857493600 10800 1 EEST}
-    {3873481200 7200 0 EET}
+    {3871407600 7200 0 EET}
     {3888943200 10800 1 EEST}
-    {3904930800 7200 0 EET}
+    {3902857200 7200 0 EET}
     {3920392800 10800 1 EEST}
-    {3936380400 7200 0 EET}
+    {3934306800 7200 0 EET}
     {3951842400 10800 1 EEST}
-    {3967830000 7200 0 EET}
+    {3965756400 7200 0 EET}
     {3983896800 10800 1 EEST}
-    {3999279600 7200 0 EET}
+    {3997810800 7200 0 EET}
     {4015346400 10800 1 EEST}
-    {4031334000 7200 0 EET}
+    {4029260400 7200 0 EET}
     {4046796000 10800 1 EEST}
-    {4062783600 7200 0 EET}
+    {4060710000 7200 0 EET}
     {4078245600 10800 1 EEST}
-    {4094233200 7200 0 EET}
+    {4092159600 7200 0 EET}
 }
