@@ -5,4 +5,6 @@ set TZData(:Pacific/Apia) {
     {-2855737984 -41216 0 LMT}
     {-1861878784 -41400 0 SAMT}
     {-631110600 -39600 0 WST}
+    {1254654000 -36000 1 WSDT}
+    {1269770400 -39600 0 WST}
 }
